# ChangeLog for dev-ruby/settingslogic
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  settingslogic-2.0.6-r1.ebuild:
  Add ree18,jruby.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  settingslogic-2.0.6-r1.ebuild:
  Keyword ~x86-macos.

  03 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  -settingslogic-2.0.6.ebuild:
  Remove old version.

*settingslogic-2.0.6-r1 (06 Aug 2010)

  06 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  +settingslogic-2.0.6-r1.ebuild:
  Convert to ruby-fakegem.

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  -settingslogic-2.0.3.ebuild:
  Remove old version.

*settingslogic-2.0.6 (07 May 2010)

  07 May 2010; Hans de Graaff <graaff@gentoo.org>
  +settingslogic-2.0.6.ebuild:
  Version bump.

*settingslogic-2.0.3 (29 Oct 2009)

  29 Oct 2009; Hans de Graaff <graaff@gentoo.org>
  +settingslogic-2.0.3.ebuild, +metadata.xml:
  Initial import.
