@@ -2,13 +2,11 @@
 Hash: SHA256
 
 DIST settingslogic-2.0.6.gem 10752 RMD160 a6a0dc87f059e2818f3c76d905d048d95d242f1b SHA1 b2f5e6b9f273eb51f7ffeb563d91986ece0d5b6a SHA256 8eea8b78b3a21b776989063362cf666044fedb282e659af04c1cb36ce3c6fce4
-EBUILD settingslogic-2.0.6-r1.ebuild 757 RMD160 b686b27a7ab91a5fc9876bc3d0bd83a94b668ea8 SHA1 e90cf5831f3c0135d0c13b96481132e78402d536 SHA256 e92e0f890c5c1b99f40b4237459b86190688b5f264cd822ad48b28f6709fc6c2
-MISC ChangeLog 976 RMD160 4b78bcd919a5c5f665f9b3b512d17a17777e425c SHA1 bd00d1e396acb33c66532a176aa1b15e08326575 SHA256 2578e3cad28acb3455d310c0c76e13bc924addc14c2a7c202a0040e379650f9b
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST settingslogic-2.0.8.gem 11264 RMD160 0fb9426bf524265b87a53b50e7e07f18ffd6583a SHA1 91fedd87b160dce70459ec32c2c86f080c081adb SHA256 eb7ac746ebad1eb2095ccea9fd412c8aa3990d5a9cc00d0af13fc74295bd90e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2u33AACgkQrnu0mw69JkrtkQD/Uc3GxFIfC33TvFRUfF4WdmAg
-ra1/iFTSfuQ4loRQuQoA/1hX/iHxWk4DiVpDlasV69h24q/KUeWs/cbBQC7DQfvp
-=ri7p
+iF4EAREIAAYFAk/NoYAACgkQiIP6VqMIqNf00AD+Lbi1oe8S4JL9p3oHEucQNzBH
+RPhHqCCU6wQ1OcC8QfwA/RBwLAO/lMWSoA0m6sXzu37RTsB4ilxnHx+32Emnd0Pk
+=tSaB
 -----END PGP SIGNATURE-----
