@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/settingslogic
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*settingslogic-2.0.8 (05 Jun 2012)
+
+  05 Jun 2012; Hans de Graaff <graaff@gentoo.org> +settingslogic-2.0.8.ebuild:
+  Version bump. Add ruby19.
 
   20 Apr 2011; Hans de Graaff <graaff@gentoo.org>
   settingslogic-2.0.6-r1.ebuild:
